platform/stack/packages/application/kargo/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kargo-api
  namespace: adhar-system
spec:
  parentRefs:
  - name: adhar-gateway
    namespace: adhar-system
  hostnames:
  - kargo.adhar.localtest.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kargo-api
      port: 80
